--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -7,6 +7,14 @@ body{
     background-color: #F9F9F9;
 }
 
+.bg-gray-light{
+    background: rgba(255, 255, 255, 0.5);
+}
+
+.bg-indigo-100{
+    background-color: #EBE9F8;
+}
+
 .btn-title{
     background: rgba(79, 70, 229, 0.1);
     box-sizing: border-box;
@@ -90,9 +98,52 @@ body{
   /* Vector 3 */
 #testimonials{
     background: linear-gradient(96.04deg, #4F46E5 0%, #7D5EF7 100%), #FFFFFF;
+    position: relative;
+}
+
+#testimonials::before{
+    transform: skewY(-2deg);
+    content: "";
+    position:absolute;
+    width: 100%;
+    height: 50px;
+    top:0px;
+    left:0px;
+    z-index: 1;
+    display: block;
+    background: linear-gradient(96.04deg, #4F46E5 0%, #7D5EF7 100%);
+    transform-origin: left;
+}
+
+.contact-me::before{
+    transform: skewY(-2deg);
+    content: "";
+    position:absolute;
+    width: 100%;
+    height: 50px;
+    top:0px;
+    left:0px;
+    z-index: 1;
+    display: block;
+    background-color: #EBE9F8;
+    transform-origin: left;
 }
 
 
-.bg-gray-light{
-    background: rgba(255, 255, 255, 0.5);
+.homepage-header::before{
+    transform: skewY(2deg);
+    content: "";
+    position:absolute;
+    width: 100%;
+    height: 50px;
+    bottom:0px;
+    left:0px;
+    z-index: 1;
+    display: block;
+    background-color: #FFF;
+    transform-origin: left;
+}
+
+#projects{
+    background-color: #FFF;
 }
