--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -15,6 +15,11 @@ body{
     background: linear-gradient(96.04deg, #4F46E5 0%, #7D5EF7 100%);
 }
 
+.bg-indigo-gradient{
+    background: linear-gradient(96.04deg, #4F46E5 0%, #7D5EF7 100%), #FFFFFF;
+}
+
+
 .btn-transparent{
     background-color: rgba(255, 255, 255, 0.5);
     backdrop-filter: blur(30px);
@@ -62,9 +67,9 @@ body{
 .side-nav{
     display: flex;
     flex-direction: column;
-    width: 90%;
+    width: 100%;
     height: 100vh;
-    top: 70px;
+    top: 0;
     position: fixed;
     z-index: 100;
     background-color: #FFF;
@@ -129,7 +134,7 @@ body{
     content: "";
     position:absolute;
     width: 100%;
-    height: 50px;
+    height: 150px;
     top:0px;
     left:0px;
     z-index: 1;
@@ -182,6 +187,7 @@ body{
 
 .control-dots{
     position: relative !important;
+    margin: 24px 0px 10px 0px !important;
 }
 
 .control-dots .selected{
