add favicon + fiz issue css

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -148,47 +148,48 @@ body{
     position: relative;
 }
 
-#testimonials::before{
-    transform: skewY(-2deg);
-    content: "";
-    position:absolute;
-    width: 100%;
-    height: 150px;
-    top:0px;
-    left:0px;
-    z-index: 1;
-    display: block;
-    background: linear-gradient(96.04deg, #4F46E5 0%, #7D5EF7 100%);
-    transform-origin: left;
-}
 
-.contact-me::before{
-    transform: skewY(-2deg);
-    content: "";
-    position:absolute;
-    width: 100%;
-    height: 50px;
-    top:0px;
-    left:0px;
-    z-index: 1;
-    display: block;
-    background-color: #EBE9F8;
-    transform-origin: left;
-}
-
-
-.homepage-header::before{
-    transform: skewY(3deg);
-    content: "";
-    position:absolute;
-    width: 100%;
-    height: 100px;
-    bottom:0px;
-    left:0px;
-    z-index: 1;
-    display: block;
-    background-color: #FFF;
-    transform-origin: left;
+@media (min-width: 450px) {
+    #testimonials::before{
+        transform: skewY(-2deg);
+        content: "";
+        position:absolute;
+        width: 100%;
+        height: 150px;
+        top:0px;
+        left:0px;
+        z-index: 1;
+        display: block;
+        background: linear-gradient(96.04deg, #4F46E5 0%, #7D5EF7 100%);
+        transform-origin: left;
+    }
+    
+    .contact-me::before{
+        transform: skewY(-2deg);
+        content: "";
+        position:absolute;
+        width: 100%;
+        height: 50px;
+        top:0px;
+        left:0px;
+        z-index: 1;
+        display: block;
+        background-color: #EBE9F8;
+        transform-origin: left;
+    }
+    .homepage-header::before{
+        transform: skewY(3deg);
+        content: "";
+        position:absolute;
+        width: 100%;
+        height: 100px;
+        bottom:0px;
+        left:0px;
+        z-index: 1;
+        display: block;
+        background-color: #FFF;
+        transform-origin: left;
+    }
 }
 
 #projects{
