--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -36,7 +36,6 @@ body{
 .btn-title{
     background: rgba(79, 70, 229, 0.1);
     box-sizing: border-box;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     color: #4F46E5;
 }
 
@@ -180,7 +179,7 @@ body{
         background-color: #EBE9F8;
         transform-origin: left;
     }
-    .homepage-header::after{
+    .homepage-header::before{
         transform: skewY(3deg);
         content: "";
         position:absolute;
