--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -131,10 +131,10 @@ body{
 }
 
 .bg-escargot-leandre{
-    background-image: linear-gradient(180deg, rgba(0, 0, 0, 0.09) 0%, rgba(0, 0, 0, 0.46) 100%),  url("../images/bg-escargot-leandre.jpg");
+    background-image: linear-gradient(180deg, rgba(0, 0, 0, 0.09) 0%, rgba(0, 0, 0, 0.46) 100%),  url("../images/bg-escargot-leandre.jpeg");
     background-image: image-set(
         url("../images/bg-escargot-leandre.avif") type("image/avif"),
-        url("../images/bg-escargot-leandre.jpg") type("image/jpg")
+        url("../images/bg-escargot-leandre.jpeg") type("image/jpeg")
     );
 }
 
