--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -403,13 +403,40 @@ body {
 
 .wrapper-services .box {
     border: 1px solid #ccc;
+    transform: translateY(50px);
+    opacity: 0;
+    transition: 500ms ease-in-out;
+}
+
+.section.active .wrapper-services .box-2 {
+    transition-delay: 400ms;
+}
+
+.section.active .wrapper-services .box-3 {
+    transition-delay: 500ms;
+}
+
+.section.active .wrapper-services .box-6 {
+    transition-delay: 600ms;
+}
+
+.section.active .wrapper-services .box-5 {
+    transition-delay: 700ms;
+}
+
+.section.active .wrapper-services .box-4 {
+    transition-delay: 800ms;
+}
+
+.section.active .box {
+    transform: translateY(0);
+    opacity: 1;
 }
 
 .section.active .wrapper-services :is(.box-2, .box-4, .box-6) {
     background-color: #fff;
     border: 0;
     box-shadow: 0px 15px 100px 0px rgba(0, 0, 0, .1);
-    transition: 750ms;
 }
 
 .splide__pagination {
@@ -472,4 +499,116 @@ span.word {
 
 .blog .article:hover .illu {
     box-shadow: 0px 25px 75px 0px rgba(0, 0, 0, .2);
+}
+
+.navbar {
+    background-color: rgba(255, 255, 255, .85);
+    backdrop-filter: blur(20px);
+    -webkit-backdrop-filter: blur(20px);
+    border-bottom: 1px solid #eee;
+    position: fixed;
+    top: 0px;
+    z-index: 99;
+}
+
+.navbar .logo {
+    height: 1.5em;
+}
+
+.navbar .tabs a {
+    font-size: .8em;
+    font-weight: 600;
+    text-transform: uppercase;
+    letter-spacing: .1em;
+    transform: translateY(1em);
+    opacity: 0;
+    animation-name: tab;
+    animation-duration: 200ms;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards;
+}
+
+@keyframes tab {
+    to {
+        transform: translateY(0);
+        opacity: 1;
+    }
+}
+
+.navbar .tabs a:nth-child(1) {
+    animation-delay: 100ms;
+}
+
+.navbar .tabs a:nth-child(2) {
+    animation-delay: 150ms;
+}
+
+.navbar .tabs a:nth-child(3) {
+    animation-delay: 200ms;
+}
+
+.navbar .tabs a:nth-child(4) {
+    animation-delay: 250ms;
+}
+
+.navbar .tabs a:nth-child(5) {
+    animation-delay: 300ms;
+}
+
+.navbar .btn {
+    padding: 12px 25px;
+    font-size: .8em;
+    font-weight: 600;
+    text-transform: uppercase;
+    letter-spacing: .1em;
+    transition: 150ms;
+}
+
+.navbar .btn:hover {
+    padding: 12px 30px;
+}
+
+footer {
+    background-color: #111;
+    position: relative;
+}
+
+footer::before {
+    content: '';
+    width: 100%;
+    height: 10px;
+    background: linear-gradient(-45deg, #4F46E5, #836ae8, #a447b3, #4F46E5);
+	background-size: 400% 400%;
+	animation: gradient 15s ease infinite;
+    position: absolute;
+    left: 0;
+    top: -10px;
+}
+
+@keyframes gradient {
+	0% {
+		background-position: 0% 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}
+}
+
+.icon-social {
+    width: 40px;
+    height: 40px;
+    background-color: #fff;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #000;
+    transition: 150ms;
+}
+
+.icon-social:hover {
+    transform: scale(.92);
 }
